--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
+    "motion": "^12.25.0",
     "mysql2": "^3.16.0",
     "next": "16.1.0",
     "react": "19.2.3",
